--- a/src/main/resources/templates/login_success.html
+++ b/src/main/resources/templates/login_success.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>로그인 성공</title>
 </head>
 <body>
-    회원가입 성공
+    <h3>로그인 성공</h3>
 </body>
 </html>
